# Pet_Project

./: .env  .pre-commit-config.yaml  lint.bat  pyproject.toml
src/: main.py
src/api/: fields.py  models.py  views.py
src/db/: util.py
src/pet_project/: settings.py
